--- a/task1/style.css
+++ b/task1/style.css
@@ -1,7 +1,7 @@
 body, html {
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif; 
+    font-family: "Ubuntu", sans-serif;
     height: 100%;
     width: 100%;
     display: flex;
@@ -31,21 +31,19 @@ body, html {
     padding: 20px;
 }
 
-.btn {
-    height: 100px; 
+.btn{
+    height: 60px; 
     width: 100px;      
     border-radius: 50%;      
-    cursor: pointer;
-    font-size: 1.2rem;
-    transition: 0.5s;
-    color: rgb(138, 135, 135);
+    font-size: 1.2rem;  
+    color: rgb(0, 0, 0);
     font-weight: 500; 
     border: none; 
     display: flex; 
     align-items: center; 
     justify-content: center; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color: black; 
+    
 }
 
 .card {
@@ -53,7 +51,7 @@ body, html {
     border-radius: 20px;
     background-color: #f8f9fa;
     border: 1px solid #ddd;
-    padding: 40px;
+    padding: 20px;
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -63,11 +61,16 @@ body, html {
 }
 
 .card-inner {
+    margin-top: 20px;
+    height: 100%;
+    width: 90%;
     display: flex;
+    border-radius: 40px;
     flex-direction: column;
     align-items: center; 
     justify-content: center; 
-    height: auto; 
+    background-color: #000;
+    
 }
 
 #time {
@@ -77,21 +80,21 @@ body, html {
     justify-content: center; 
     align-items: center; 
     gap: 10px; 
-    color: #000;
+    color: #ffffff;
 }
 
 .digit {
     font-size: 4rem; 
-    color: #343a40;
+    color: #ffffff;
 }
 
 .txt {
     font-size: 1.5rem;
-    color: #6c757d;
+    color: #ffffff;
 }
 
 #buttons {
-    margin-top: 100px; /* Adjust margin for spacing between buttons and timer */
+    margin-top: 50px; 
     display: flex;
     justify-content: center;
     gap: 30px;
@@ -129,4 +132,10 @@ h2 {
 
 .lap-card:hover {
     transform: scale(1.02); 
+}
+.btn:hover {
+    color: rgb(255, 255, 255);
+    background-color: #777676; 
+    transform: scale(1.05); 
+    
 }
