--- a/task1/style.css
+++ b/task1/style.css
@@ -1,141 +1,140 @@
-body, html {
-    padding: 0;
-    margin: 0;
-    font-family: "Ubuntu", sans-serif;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    background-color: #ffffff;
+body,
+html {
+  padding: 0;
+  margin: 0;
+  font-family: "Ubuntu", sans-serif;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
 }
 
 .stopwatch-heading {
-    font-family: "Ubuntu", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 500;
   font-style: normal;
-    font-size: 2.5rem;  
-    color: #343a40;    
-    margin: 20px 0;     
-    text-align: center;  
-}   
-
-.container {
-    display: flex;
-    flex-direction: row; 
-    justify-content: center; 
-    align-items: center; 
-    width: 90%;
-    height: 90vh; 
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
+  font-size: 2.5rem;
+  color: #343a40;
+  margin: 20px 0;
+  text-align: center;
 }
 
-.btn{
-    height: 60px; 
-    width: 100px;      
-    border-radius: 50%;      
-    font-size: 1.2rem;  
-    color: rgb(0, 0, 0);
-    font-weight: 500; 
-    border: none; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+  background-color: rgb(255, 255, 255);
+  padding: 30px;
+}
+
+.btn {
+  height: 60px;
+  width: 100px;
+  border-radius: 50%;
+  font-size: 1.2rem;
+  color: rgb(0, 0, 0);
+  font-weight: 500;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .card {
-    flex: 0.6; 
-    border-radius: 20px;
-    background-color: #f8f9fa;
-    border: 1px solid #ddd;
-    padding: 20px;
-    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    height: 100%;
+  flex: 0.6;
+  border-radius: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  font-family: "Orbitron", sans-serif;
+  padding: 20px;
+  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .card-inner {
-    margin-top: 20px;
-    height: 100%;
-    width: 90%;
-    display: flex;
-    border-radius: 40px;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    background-color: #000;
-    
+  margin-top: 20px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  border-radius: 40px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #000;
 }
 
 #time {
-    font-size: 2em;
-    font-weight: bold;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    gap: 10px; 
-    color: #ffffff;
+  font-size: 2em;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #ffffff;
 }
 
 .digit {
-    font-size: 4rem; 
-    color: #ffffff;
+  font-size: 4rem;
+  color: #ffffff;
 }
 
 .txt {
-    font-size: 1.5rem;
-    color: #ffffff;
+  font-size: 1.5rem;
+  color: #ffffff;
 }
 
 #buttons {
-    margin-top: 50px; 
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
 
 .laps-card {
-    flex: 0.4; 
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
-    height: 100%; 
-    overflow-y: auto;
+  flex: 0.4;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  overflow-y: auto;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 #laps {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .lap-card {
-    padding: 15px;
-    margin-bottom: 10px;
-    background-color: #f8f9fa; 
-    border-radius: 10px;
-    border: 1px solid #ddd; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    transition: transform 0.2s; /* Animation on hover */
+  padding: 15px;
+  margin-bottom: 10px;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s; /* Animation on hover */
 }
 
 .lap-card:hover {
-    transform: scale(1.02); 
+  transform: scale(1.02);
 }
 .btn:hover {
-    color: rgb(255, 255, 255);
-    background-color: #777676; 
-    transform: scale(1.05); 
-    
+  color: rgb(255, 255, 255);
+  background-color: #777676;
+  transform: scale(1.05);
 }
