--- a/task1/style.css
+++ b/task1/style.css
@@ -23,42 +23,34 @@ html {
 
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 90vh;
-  background-color: rgb(255, 255, 255);
-  padding: 30px;
+  background-color: rgb(94, 94, 94);
+  height: 100%;
+  border-radius: 25px;
 }
 
 .btn {
   height: 60px;
-  width: 100px;
-  border-radius: 50%;
-  font-size: 1.2rem;
-  color: rgb(0, 0, 0);
+  width: 80px;
+  margin: 10px;
   font-weight: 500;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #343a40;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.945);
 }
 
 .card {
-  flex: 0.6;
   border-radius: 20px;
-  background-color: #ffffff;
+  background-color: #313030;
   border: 1px solid #ddd;
   font-family: "Orbitron", sans-serif;
-  padding: 20px;
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
 
 .card-inner {
@@ -66,11 +58,11 @@ html {
   height: 100%;
   width: 100%;
   display: flex;
-  border-radius: 40px;
+  border-radius: 25px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #000;
+  background-color: #3b3b3b;
 }
 
 #time {
@@ -101,12 +93,15 @@ html {
 }
 
 .laps-card {
-  flex: 0.4;
-  padding: 20px;
-  background-color: #fff;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #3f3f3f;
   border-radius: 10px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
-  height: 100%;
+
+  width: 75vh;
   overflow-y: auto;
 }
 
@@ -121,6 +116,8 @@ h2 {
 }
 
 .lap-card {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
   padding: 15px;
   margin-bottom: 10px;
   background-color: #f8f9fa;
@@ -137,4 +134,11 @@ h2 {
   color: rgb(255, 255, 255);
   background-color: #777676;
   transform: scale(1.05);
+}
+.lap-card {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+.lap-card::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
