--- a/task1/style.css
+++ b/task1/style.css
@@ -27,7 +27,7 @@ html {
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: rgb(94, 94, 94);
+  background-color: rgb(255, 255, 255);
   height: 100%;
   border-radius: 25px;
 }
@@ -43,7 +43,7 @@ html {
 
 .card {
   border-radius: 20px;
-  background-color: #313030;
+  background-color: #ff0808;
   border: 1px solid #ddd;
   font-family: "Orbitron", sans-serif;
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
@@ -58,11 +58,12 @@ html {
   height: 100%;
   width: 100%;
   display: flex;
-  border-radius: 25px;
+  border-radius: 10px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #3b3b3b;
+  background-color: #ffffff;
+  color: #3f3f3f;
 }
 
 #time {
@@ -72,17 +73,17 @@ html {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  color: #ffffff;
+  color: #f50000;
 }
 
 .digit {
   font-size: 3rem;
-  color: #ffffff;
+  color: #2c2c2c;
 }
 
 .txt {
   font-size: 1rem;
-  color: #ffffff;
+  color: #414141;
 }
 
 #buttons {
@@ -100,7 +101,6 @@ html {
   background-color: #3f3f3f;
   border-radius: 10px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
-
   width: 75vh;
   overflow-y: auto;
 }
@@ -116,8 +116,6 @@ h2 {
 }
 
 .lap-card {
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
   padding: 15px;
   margin-bottom: 10px;
   background-color: #f8f9fa;
